--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,8 @@
         android:layout_width="56dp"
         android:layout_height="45dp"
 
-        android:layout_marginStart="304dp"
-        android:layout_marginLeft="304dp"
-        android:layout_marginTop="560dp"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="32dp"
         android:hint="Status:"
         android:textColor="#fff"
         android:textColorHint="#fff"
@@ -26,14 +25,12 @@
 
     <EditText
         android:id="@+id/txtinput1"
-        android:layout_width="243dp"
-        android:layout_height="334dp"
+        android:layout_width="242dp"
+        android:layout_height="275dp"
         android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
 
         android:layout_marginTop="90dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
 
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
@@ -41,7 +38,7 @@
         android:inputType="textMultiLine"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbarSize="8dp"
-        android:scrollbarStyle="insideInset"
+        android:scrollbarStyle="outsideInset"
         android:scrollbars="vertical"
         android:textColor="#fff"
         android:textColorHint="#AAA"
@@ -56,8 +53,7 @@
         android:id="@+id/repid"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginLeft="256dp"
+        android:layout_marginStart="204dp"
         android:layout_marginTop="36dp"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
@@ -72,9 +68,8 @@
         android:id="@+id/textView"
         android:layout_width="158dp"
         android:layout_height="38dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="36dp"
 
         android:text="Numero de repeticiones: "
         android:textColor="#fff"
@@ -86,8 +81,7 @@
         android:layout_width="136dp"
         android:layout_height="48dp"
         android:layout_marginStart="176dp"
-        android:layout_marginLeft="176dp"
-        android:layout_marginTop="464dp"
+        android:layout_marginTop="396dp"
         android:background="#2a7fba"
         android:text="Cargar archivo"
         android:textColor="#FFF"
@@ -99,9 +93,8 @@
         android:id="@+id/guardar"
         android:layout_width="164dp"
         android:layout_height="48dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginTop="548dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginTop="500dp"
         android:background="#2a7fba"
         android:text="Guardar a archivo"
         android:textColor="#FFF"
@@ -114,12 +107,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
-        android:layout_marginLeft="72dp"
-        android:layout_marginTop="464dp"
+        android:layout_marginTop="396dp"
         android:background="#2a7fba"
         android:text="INICIAR"
         android:textColor="#FFF"
         android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/archivoname"
+        android:layout_width="170dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="508dp"
+        android:ems="10"
+        android:hint="Nombre de archivo"
+        android:inputType="textPersonName"
+        android:textColor="#FFF"
+        android:textColorHint="#AAA"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
